--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-proposal-private-methods": "^7.17.12",
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.9"
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "vite": "^2.9.9",
+    "vite-plugin-eslint": "^1.6.1",
+    "vue-eslint-parser": "^9.0.2"
   }
 }
