--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-vue": "^9.0.1",
+    "sass": "^1.52.1",
     "vite": "^2.9.9",
     "vite-plugin-eslint": "^1.6.1",
     "vue-eslint-parser": "^9.0.2"
