--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
+    "pinia": "^2.0.14",
     "vue": "^3.2.25"
   },
   "devDependencies": {
